--- a/reference.bib
+++ b/reference.bib
@@ -18,7 +18,7 @@
 @String { IJNME    = {Int. J. Numer. Meth. Eng.} }
 @String { IMR      = {Int. Meshing Roundtable} }
 @String { MATHCOMP = {Math. Comput.} }
-@String { NIPS     = {NeurIPS} }
+@String { NeurIPS  = {NeurIPS} }
 @String { PG       = {Comput. Graph. Forum (PG)} }
 @String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
 @String { SGP      = {Comput. Graph. Forum (SGP)} }
@@ -29,12 +29,14 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICLR,
   year      = {2018}
 }
+
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -62,6 +64,7 @@
   year      = {2003}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -69,14 +72,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -87,12 +88,14 @@
   number  = {12}
 }
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -170,7 +173,6 @@
   number  = {7}
 }
 
-
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
@@ -186,6 +188,7 @@
   number  = {1},
   year    = {2016}
 }
+
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -250,7 +253,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
@@ -265,6 +267,7 @@
   number  = {4},
   year    = {2002}
 }
+
 
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
@@ -284,7 +287,6 @@
   number  = {1}
 }
 
-
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
   title   = {A method for registration of {3D} shapes},
@@ -300,6 +302,7 @@
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -347,7 +350,7 @@
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
   title     = {Learning shape correspondence with anisotropic convolutional neural networks},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2016}
 }
 
@@ -406,7 +409,7 @@
 @inproceedings{Brown2020,
   title     = {Language models are few-shot learners},
   author    = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
 
@@ -466,7 +469,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
@@ -480,6 +482,7 @@
   journal = {arXiv:1512.03012},
   year    = {2015}
 }
+
 
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
@@ -504,7 +507,6 @@
   booktitle = CGF
 }
 
-
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -514,13 +516,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -531,13 +533,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -553,13 +555,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -568,13 +570,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
   author    = {Chibane, Julian and Alldieck, Thiemo and Pons-Moll, Gerard},
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -584,6 +586,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -763,7 +766,7 @@
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
   author    = {Dosovitskiy, Alexey and Springenberg, Jost Tobias and Riedmiller, Martin and Brox, Thomas},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2014}
 }
 
@@ -781,7 +784,6 @@
   year    = {2018}
 }
 
-
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
   title   = {{QEx}: robust quad mesh extraction},
@@ -791,7 +793,6 @@
   number  = {6}
 }
 
-
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
   title   = {Level-of-detail quad meshing},
@@ -800,6 +801,7 @@
   volume  = {33},
   number  = {6}
 }
+
 
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
@@ -827,6 +829,7 @@
   volume  = {11},
   number  = {19}
 }
+
 
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
@@ -933,14 +936,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
   booktitle = ICML,
   year      = {2017}
 }
-
 
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
@@ -949,12 +950,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
+
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -984,7 +987,7 @@
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2016}
 }
 
@@ -1002,7 +1005,6 @@
   year    = {2017}
 }
 
-
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
   title     = {{3D} semantic segmentation with submanifold sparse convolutional networks},
@@ -1010,13 +1012,13 @@
   year      = 2018
 }
 
-
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
   title     = {Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
@@ -1024,6 +1026,7 @@
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1247,7 +1250,7 @@
 @inproceedings{Hegde2016,
   author    = {Vishakh Hegde and Reza Zadeh},
   title     = {{FusionNet}: {3D} object classification using multiple data representations},
-  booktitle = {NIPS (Workshop on {3D} Deep Learning)},
+  booktitle = {NeurIPS (Workshop on {3D} Deep Learning)},
   year      = {2016}
 }
 
@@ -1348,7 +1351,7 @@
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
   author    = {Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2018}
 }
 
@@ -1613,7 +1616,6 @@
   year      = {2013}
 }
 
-
 @article{Kingma2014a,
   title   = {Adam: A method for stochastic optimization},
   author  = {Kingma, Diederik P. and Ba, Jimmy},
@@ -1627,6 +1629,7 @@
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @inproceedings{Kobbelt1998,
   author    = {Kobbelt, L. and Campagna, S. and Vorsatz, J. AND Seidel, H.-P.},
@@ -1662,7 +1665,7 @@
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
   title     = {Efficient inference in fully connected {CRFs} with gaussian edge potentials},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2011}
 }
 
@@ -1727,14 +1730,12 @@
   number  = {99}
 }
 
-
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
   booktitle = {Ninth International Conference on Computer Aided Design and Computer Graphics},
   year      = {2005}
 }
-
 
 @inproceedings{Lee2015,
   author    = {Donghoon Lee and Hyunsin Park and Yoo, C.D.},
@@ -1743,11 +1744,22 @@
   year      = {2015}
 }
 
+
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
   author    = {Jiabao Lei and Kui Jia},
   booktitle = ICML,
   year      = {2020}
+}
+
+
+@article{Leon2008,
+  title   = {Volume octree with an implicitly defined dual grid},
+  author  = {Le{\'o}n, Alejandro and Torres, Juan Carlos and Velasco, Francisco},
+  journal = {Computers \& Graphics},
+  volume  = {32},
+  number  = {4},
+  year    = {2008}
 }
 
 @inproceedings{Levy2013,
@@ -1776,13 +1788,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1797,16 +1809,16 @@
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
   author    = {Li, Yangyan and Bu, Rui and Sun, Mingchao and Wu, Wei and Di, Xinhan and Chen, Baoquan},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2018}
 }
+
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -1866,7 +1878,7 @@
 @inproceedings{Liu2018a,
   title     = {See and think: Disentangling semantic scene completion},
   author    = {Liu, Shice and Hu, Yu and Zeng, Yiming and Tang, Qiankun and Jin, Beibei and Han, Yinhe and Li, Xiaowei},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2018}
 }
 
@@ -1887,14 +1899,14 @@
 @inproceedings{Liu2019a,
   title     = {Point-Voxel {CNN} for Efficient {3D} Deep Learning},
   author    = {Liu, Zhijian and Tang, Haotian and Lin, Yujun and Han, Song},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2019}
 }
 
 @inproceedings{Liu2020,
   title     = {Neural sparse voxel fields},
   author    = {Liu, Lingjie and Gu, Jiatao and Zaw Lin, Kyaw and Chua, Tat-Seng and Theobalt, Christian},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
 
@@ -2191,7 +2203,6 @@
   volume  = {32}
 }
 
-
 @inproceedings{Niu2018,
   author    = {Chengjie Niu and Jun Li and Kai Xu},
   title     = {{Im2Struct}: Recovering {3D} shape structure from a single {RGB} image},
@@ -2206,6 +2217,7 @@
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
@@ -2325,7 +2337,7 @@
 @inproceedings{Qi2017,
   author    = {Qi, Charles R. and Yi, Li and Su, Hao and Guibas, Leonidas J.},
   title     = {{PointNet++}: Deep hierarchical feature learning on point sets in a metric space},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2017}
 }
 
@@ -2375,10 +2387,9 @@
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
   author    = {Rahimi, Ali and Recht, Benjamin},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2008}
 }
-
 
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
@@ -2399,6 +2410,7 @@
   year    = 2020
 }
 
+
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2418,7 +2430,7 @@
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
   title     = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2015}
 }
 
@@ -2466,7 +2478,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
@@ -2484,6 +2495,7 @@
   issn    = {0377-0427}
 }
 
+
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2496,7 +2508,7 @@
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2017}
 }
 
@@ -2511,7 +2523,7 @@
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
   title     = {Self-supervised deep learning on point clouds by reconstructing space},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2019}
 }
 
@@ -2552,7 +2564,6 @@
   year      = {2016}
 }
 
-
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2570,6 +2581,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2579,7 +2591,6 @@
   number  = {4}
 }
 
-
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2587,6 +2598,7 @@
   volume  = {89},
   year    = {2010}
 }
+
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2636,7 +2648,6 @@
   number  = {3}
 }
 
-
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2656,6 +2667,7 @@
   number  = {3}
 }
 
+
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2663,13 +2675,13 @@
   year    = {2015}
 }
 
-
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
   journal = {arXiv preprint arXiv:2106.04121},
   year    = {2021}
 }
+
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
@@ -2698,7 +2710,7 @@
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2002}
 }
 
@@ -2730,11 +2742,10 @@
   year    = {2018}
 }
 
-
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2019}
 }
 
@@ -2742,9 +2753,10 @@
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
   author    = {Sitzmann, Vincent and Martel, Julien NP and Bergman, Alexander W and Lindell, David B and Wetzstein, Gordon},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2805,7 +2817,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2820,6 +2831,7 @@
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2874,7 +2886,6 @@
   year      = {2015}
 }
 
-
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2894,13 +2905,13 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
-
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -2913,15 +2924,23 @@
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
   booktitle = ECCV,
   year      = {2020}
+}
+
+@article{Tang2021,
+  title   = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
+  author  = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
+  journal = NeurIPS,
+  year    = {2021}
 }
 
 @article{Tarini2004,
@@ -3039,7 +3058,7 @@
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention is all you need},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2017}
 }
 
@@ -3282,14 +3301,14 @@
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2016}
 }
 
 @inproceedings{Wu2017,
   author    = {Wu, Jiajun and Wang, Yifan and Xue, Tianfan and Sun, Xingyuan and Freeman, Bill and Tenenbaum, Josh},
   title     = {Marrnet: {3D} shape reconstruction via {2.5D} sketches},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2017}
 }
 
@@ -3334,6 +3353,15 @@
 }
 
 
+@article{Wu2020,
+  title   = {A comprehensive survey on graph neural networks},
+  author  = {Wu, Zonghan and Pan, Shirui and Chen, Fengwen and Long, Guodong and Zhang, Chengqi and Philip, S Yu},
+  journal = {IEEE Transactions on Neural Networks and Learning Systems},
+  volume  = {32},
+  number  = {1},
+  year    = {2020}
+}
+
 @article{Wu2021,
   title   = {Cvt: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
@@ -3344,7 +3372,7 @@
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
   author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
-  journal = NIPS,
+  journal = NeurIPS,
   year    = {2021}
 }
 
@@ -3410,6 +3438,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
   author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
@@ -3424,7 +3453,6 @@
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
-
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -3444,9 +3472,10 @@
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
-  booktitle = NIPS,
+  booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3465,7 +3494,6 @@
   year    = {2015}
 }
 
-
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
@@ -3480,13 +3508,13 @@
   year    = {2018}
 }
 
+
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
   title     = {{FoldingNet}: Point cloud auto-encoder via deep grid deformation},
   year      = {2018}
 }
-
 
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
@@ -3536,6 +3564,7 @@
   number  = {4}
 }
 
+
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
@@ -3561,7 +3590,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
   booktitle = CVPR,
@@ -3575,6 +3603,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
@@ -3590,7 +3619,6 @@
   booktitle = CVPR,
   year      = {2009}
 }
-
 
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
@@ -3631,6 +3659,7 @@
   year      = {2014}
 }
 
+
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
   title   = {Variational mesh denoising using total variation and piecewise constant function space},
@@ -3639,7 +3668,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3650,13 +3678,13 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
   title     = {Colorful image colorization},
   year      = {2016}
 }
-
 
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
@@ -3672,13 +3700,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3687,13 +3715,13 @@
   year      = {2021}
 }
 
+
 @article{Zhang2021a,
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
   author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
   journal = {arXiv:2108.06076},
   year    = {2021}
 }
-
 
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
